// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Board /> component render 1`] = `
<tr>
  <td>
    <div
      className="cell color-2"
    >
      <div
        className="number"
      >
        2
      </div>
    </div>
  </td>
  <td>
    <div
      className="cell"
    >
      <div
        className="number"
      />
    </div>
  </td>
  <td>
    <div
      className="cell"
    >
      <div
        className="number"
      />
    </div>
  </td>
  <td>
    <div
      className="cell"
    >
      <div
        className="number"
      />
    </div>
  </td>
</tr>
`;

exports[`<Board /> component render 2`] = `
<tr>
  <td>
    <div
      className="cell"
    >
      <div
        className="number"
      />
    </div>
  </td>
  <td>
    <div
      className="cell"
    >
      <div
        className="number"
      />
    </div>
  </td>
  <td>
    <div
      className="cell"
    >
      <div
        className="number"
      />
    </div>
  </td>
  <td>
    <div
      className="cell"
    >
      <div
        className="number"
      />
    </div>
  </td>
</tr>
`;

exports[`<Board /> component render 3`] = `
<tr>
  <td>
    <div
      className="cell"
    >
      <div
        className="number"
      />
    </div>
  </td>
  <td>
    <div
      className="cell"
    >
      <div
        className="number"
      />
    </div>
  </td>
  <td>
    <div
      className="cell color-4"
    >
      <div
        className="number"
      >
        4
      </div>
    </div>
  </td>
  <td>
    <div
      className="cell"
    >
      <div
        className="number"
      />
    </div>
  </td>
</tr>
`;

exports[`<Board /> component render 4`] = `
<tr>
  <td>
    <div
      className="cell"
    >
      <div
        className="number"
      />
    </div>
  </td>
  <td>
    <div
      className="cell"
    >
      <div
        className="number"
      />
    </div>
  </td>
  <td>
    <div
      className="cell"
    >
      <div
        className="number"
      />
    </div>
  </td>
  <td>
    <div
      className="cell"
    >
      <div
        className="number"
      />
    </div>
  </td>
</tr>
`;
